# test_project_qt

./: .gitignore  CMakeLists.txt
resources/styles/: main.qss
src/: main.cpp
src/core/: AudioController.cpp  AudioController.h  LibraryStore.cpp  LibraryStore.h  ListeningStats.cpp  ListeningStats.h  PlaybackQueue.cpp  PlaybackQueue.h  Playlist.cpp  Playlist.h  PlaylistManager.cpp  PlaylistManager.h  Track.cpp  Track.h  TrackStore.cpp  TrackStore.h
src/ui/: MainWindow.cpp  MainWindow.h
src/ui/dialogs/: ProfileDialog.cpp  ProfileDialog.h  TrackMetadataDialog.cpp  TrackMetadataDialog.h
src/ui/widgets/: CoverLabel.cpp  CoverLabel.h  NeonButton.cpp  NeonButton.h  NowPlayingPanel.cpp  NowPlayingPanel.h  ParticleBackground.cpp  ParticleBackground.h  SpectrumVisualizer.cpp  SpectrumVisualizer.h
